# convoy_traj

./: AGENTS.md  CMakeLists.txt  README.md  package.xml
config/: convoy_traj_params.yaml  tag_calibration.yaml  ukf.yaml
launch/: README.md  convoy_traj.launch.py  convoy_traj_composable.launch.py  convoy_traj_with_zed_and_tag.launch.py  convoy_traj_yaml.launch.py
scripts/: calibrate_tags.py  kill_convoy.sh  test_tag_fallback.py
src/: convoy_traj_node.cpp
